--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.3">
+    <meta name="theme" content="red">
     <title>Free Fire Rewards</title>
     <link rel="stylesheet" type="text/css" href="new.css">
     
