--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="red"></meta>
+    <meta name="theme-color" content="black"></meta>
     <title>Free Fire Rewards</title>
     <link rel="stylesheet" type="text/css" href="new.css">
     
